grafanachart/templates/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-grafana
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
      app.kubernetes.io/instance: prometheus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grafana
        app.kubernetes.io/instance: prometheus
    spec:
      serviceAccountName: prometheus-grafana
      containers:
        - name: grafana
          image: docker.io/grafana/grafana:12.0.1-security-01
          ports:
            - name: grafana
              containerPort: 3000
            - name: gossip-tcp
              containerPort: 9094
              protocol: TCP
            - name: gossip-udp
              containerPort: 9094
              protocol: UDP
            - name: profiling
              containerPort: 6060
          volumeMounts:
            - name: config
              mountPath: /etc/grafana/grafana.ini
              subPath: grafana.ini
            - name: storage
              mountPath: /var/lib/grafana
            - name: sc-dashboard-volume
              mountPath: /tmp/dashboards
            - name: sc-dashboard-provider
              mountPath: /etc/grafana/provisioning/dashboards/sc-dashboardproviders.yaml
              subPath: provider.yaml
            - name: sc-datasources-volume
              mountPath: /etc/grafana/provisioning/datasources
        - name: grafana-sc-dashboard
          image: quay.io/kiwigrid/k8s-sidecar:1.30.0
          volumeMounts:
            - name: sc-dashboard-volume
              mountPath: /tmp/dashboards
        - name: grafana-sc-datasources
          image: quay.io/kiwigrid/k8s-sidecar:1.30.0
          volumeMounts:
            - name: sc-datasources-volume
              mountPath: /etc/grafana/provisioning/datasources
      volumes:
        - name: config
          configMap:
            name: prometheus-grafana
        - name: storage
          emptyDir: {}
        - name: sc-dashboard-volume
          emptyDir: {}
        - name: sc-dashboard-provider
          configMap:
            name: prometheus-grafana-config-dashboards
        - name: sc-datasources-volume
          emptyDir: {}
