grafanachart/templates/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-grafana
  namespace: monitoring
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: prometheus
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: prometheus
